--- a/compsci.html
+++ b/compsci.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RandChat</title>
+    <title>BinusChat</title>
     <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
     <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'/>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
